feat: add responsive on back-office section

--- a/bom-front/src/app/main/back-office/back-office.component.html
+++ b/bom-front/src/app/main/back-office/back-office.component.html
@@ -2,10 +2,11 @@
     <mat-card class="card-content">
         <mat-card-title>Utilisateurs</mat-card-title>
 
-        <div fxLayout="row">
-            <ngx-datatable fxFlex="70" class="material fullscreen" [rows]="rowsUserData" [columnMode]="'force'"
-                (select)="selectUser($event)" [headerHeight]="80" [footerHeight]="0" [selectionType]="'single'"
-                [rowHeight]="70" [sorts]="[{prop: 'nom', dir: 'asc'}]" [scrollbarH]="true"
+        <div fxLayout="row wrap">
+            <ngx-datatable fxFlex.xs="100" fxFlex.sm="100" fxFlex.md=100 fxFlex.lg="70" fxFlex.xl="70"
+                class="material fullscreen" [rows]="rowsUserData" [columnMode]="'force'" (select)="selectUser($event)"
+                [headerHeight]="80" [footerHeight]="0" [selectionType]="'single'" [rowHeight]="70"
+                [sorts]="[{prop: 'nom', dir: 'asc'}]" [scrollbarH]="true"
                 [messages]="{emptyMessage: 'Aucun utilisateurs'}">
 
                 <ngx-datatable-column [draggable]="false" [resizeable]="false" [name]="'Nom d\'utilisateur'"
@@ -69,7 +70,8 @@
 
             </ngx-datatable>
 
-            <div fxFlex="30" fxLayout="column" fxLayoutAlign="center center">
+            <div fxFlex.xs="100" fxFlex.sm="100" fxFlex.md=100 fxFlex.lg="30" fxFlex.xl="30" fxLayout="column"
+                fxLayoutAlign="center center">
                 <h1>{{isEditUser ? 'Modifier un utilisateur' : 'Créer un nouvel utilisateur'}}</h1>
                 <mat-card-content>
                     <form fxLayout="column" name="userForm" [formGroup]="userForm" novalidate
@@ -105,8 +107,9 @@
     <mat-card class="card-content">
         <mat-card-title>Témoignages</mat-card-title>
 
-        <div fxLayout="row" class="content">
-            <ngx-datatable fxFlex="70" class="material fullscreen" [rows]="rowsTemoignageData" [columnMode]="'force'"
+        <div fxLayout="row wrap" class="content">
+            <ngx-datatable fxFlex.xs="100" fxFlex.sm="100" fxFlex.md=100 fxFlex.lg="70" fxFlex.xl="70"
+                class="material fullscreen" [rows]="rowsTemoignageData" [columnMode]="'force'"
                 (select)="selectTemoignage($event)" [headerHeight]="80" [footerHeight]="0" [selectionType]="'single'"
                 [rowHeight]="'auto'" [sorts]="[{prop: 'nom', dir: 'asc'}]" [scrollbarH]="true"
                 [messages]="{emptyMessage: 'Aucun utilisateurs'}">
@@ -152,7 +155,8 @@
 
             </ngx-datatable>
 
-            <div fxFlex="30" fxLayout="column" fxLayoutAlign="center center">
+            <div fxFlex.xs="100" fxFlex.sm="100" fxFlex.md=100 fxFlex.lg="30" fxFlex.xl="30" fxLayout="column"
+                fxLayoutAlign="center center">
                 <h1>{{isEditTemoignage ? 'Modifier un témoignage' : 'Créer un nouveau témoignage'}}</h1>
                 <mat-card-content>
                     <form fxLayout="column" name="temoignageForm" [formGroup]="temoignageForm" novalidate
@@ -186,8 +190,9 @@
     <mat-card class="card-content">
         <mat-card-title>Produits</mat-card-title>
 
-        <div fxLayout="row" class="content">
-            <ngx-datatable fxFlex="70" class="material fullscreen" [rows]="rowsProductData" [columnMode]="'force'"
+        <div fxLayout="row wrap" class="content">
+            <ngx-datatable fxFlex.xs="100" fxFlex.sm="100" fxFlex.md=100 fxFlex.lg="70" fxFlex.xl="70"
+                class="material fullscreen" [rows]="rowsProductData" [columnMode]="'force'"
                 (select)="selectProduct($event)" [headerHeight]="80" [footerHeight]="0" [selectionType]="'single'"
                 [rowHeight]="'auto'" [sorts]="[{prop: 'nom', dir: 'asc'}]" [scrollbarH]="true"
                 [messages]="{emptyMessage: 'Aucun utilisateurs'}">
@@ -261,7 +266,8 @@
 
             </ngx-datatable>
 
-            <div fxFlex="30" fxLayout="column" fxLayoutAlign="center center">
+            <div fxFlex.xs="100" fxFlex.sm="100" fxFlex.md=100 fxFlex.lg="30" fxFlex.xl="30" fxLayout="column"
+                fxLayoutAlign="center center">
                 <h1>{{isEditProduct ? 'Modifier un produit' : 'Créer un nouveau produit'}}</h1>
                 <mat-card-content>
 
