--- a/bom-front/src/app/main/produit/produit.component.html
+++ b/bom-front/src/app/main/produit/produit.component.html
@@ -69,7 +69,8 @@
 
                             </div>
                             <div class="mb-5 detail-btns">
-                                <a class="no-link" href="mailto:hello.ateliersensible@gmail.com?subject=[COMMANDE] - {{product.name}}">
+                                <a class="no-link"
+                                    href="mailto:hello.ateliersensible@gmail.com?subject=[COMMANDE] - {{product.name}}">
                                     <button mat-raised-button color="accent" class="button-lg mr-3">
                                         Prendre commande
                                     </button>
