--- a/bom-front/src/app/main/account-manager/profile/profile.component.html
+++ b/bom-front/src/app/main/account-manager/profile/profile.component.html
@@ -31,6 +31,12 @@
                     Modifier mon profil
                 </button>
             </mat-card-actions>
+            <mat-card-actions>
+                <button mat-raised-button (click)="disconnect()" color="warn">
+                    Se déconnecter
+                </button>
+
+            </mat-card-actions>
         </form>
     </mat-card-content>
 </mat-card>
