fix: change email address

--- a/bom-front/src/app/main/about/contact/contact.component.html
+++ b/bom-front/src/app/main/about/contact/contact.component.html
@@ -32,7 +32,7 @@
       <mat-card-actions>
         <button mat-raised-button class="submit-button" color="primary" [disabled]="m_contactForm.invalid"
                 style="white-space: pre-wrap !important;">
-          <a href="mailto:ateliersensible@gmail.com?subject=Je suis {{name.value}} et mon email est: {{email.value}}&body={{message.value}}">Envoyer</a>
+          <a href="mailto:hello.ateliersensible@gmail.com?subject=Je suis {{name.value}} et mon email est: {{email.value}}&body={{message.value}}">Envoyer</a>
         </button>
       </mat-card-actions>
     </mat-card>
