feat: add redirection on profile and icon

--- a/bom-front/src/app/main-nav/main-nav.component.html
+++ b/bom-front/src/app/main-nav/main-nav.component.html
@@ -19,8 +19,7 @@
             </button>
           <span>Bôm</span>
           <span class="top-bar-spacer"></span>
-          <mat-icon class="top-bar-icon" aria-hidden="false" aria-label="Shopping">shopping_basket</mat-icon>
-          <mat-icon class="top-bar-icon" aria-hidden="false" aria-label="Account">account_circle</mat-icon>
+          <mat-icon class="top-bar-icon" [routerLink]="['/profile']" aria-hidden="false" aria-label="Account">account_circle</mat-icon>
         </mat-toolbar>
         <ng-content></ng-content>
 
