--- a/bom-front/src/app/main-nav/main-nav.component.html
+++ b/bom-front/src/app/main-nav/main-nav.component.html
@@ -1,25 +1,26 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-               [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item *ngIf="isConnected" [routerLink]="['/journal']" >JOURNAL</a>
-      <a mat-list-item *ngIf="isConnected" [routerLink]="['/profile']" >PROFILE</a>
-      <a mat-list-item [routerLink]="['/temoignage']">TEMOIGNAGE</a>
-      <a mat-list-item [routerLink]="['/qui-sommes-nous']">QUI SOMMES NOUS</a>
-      <a mat-list-item *ngIf="isAdmin" [routerLink]="['/back-office']">ADMINISTRATEUR</a>
-      <a mat-list-item [routerLink]="['/contact']">CONTACT</a>
-    </mat-nav-list>
-  </mat-sidenav>
+    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+        [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+        <mat-toolbar>Menu</mat-toolbar>
+        <mat-nav-list>
+            <a mat-list-item *ngIf="isConnected" [routerLink]="['/journal']">JOURNAL</a>
+            <a mat-list-item *ngIf="isConnected" [routerLink]="['/profile']">PROFILE</a>
+            <a mat-list-item [routerLink]="['/temoignage']">TEMOIGNAGE</a>
+            <a mat-list-item [routerLink]="['/qui-sommes-nous']">QUI SOMMES NOUS</a>
+            <a mat-list-item *ngIf="isAdmin" [routerLink]="['/back-office']">ADMINISTRATEUR</a>
+            <a mat-list-item [routerLink]="['/contact']">CONTACT</a>
+        </mat-nav-list>
+    </mat-sidenav>
     <mat-sidenav-content>
         <mat-toolbar color="primary">
             <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
                 *ngIf="isHandset$ | async">
                 <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
             </button>
-          <span>Bôm</span>
-          <span class="top-bar-spacer"></span>
-          <mat-icon class="top-bar-icon" [routerLink]="['/profile']" aria-hidden="false" aria-label="Account">account_circle</mat-icon>
+            <span>Bôm</span>
+            <span class="top-bar-spacer"></span>
+            <mat-icon class="top-bar-icon" [routerLink]="['/profile']" aria-hidden="false" aria-label="Account">
+                account_circle</mat-icon>
         </mat-toolbar>
         <ng-content></ng-content>
 
