feat: add style on toolbar

--- a/bom-front/src/app/global/toolbar-item/toolbar-item.component.html
+++ b/bom-front/src/app/global/toolbar-item/toolbar-item.component.html
@@ -1,1 +1,4 @@
-<p>toolbar-item works!</p>
+<div class="toolbar-item-container">
+    <div class="title">{{title}}</div>
+    <div *ngIf="description" class="description">{{description}}</div>
+</div>
