--- a/bom-front/src/app/main/home/home.component.html
+++ b/bom-front/src/app/main/home/home.component.html
@@ -10,6 +10,17 @@
         </div>
     </div>
 
+    <div class="detail-banner text-center">
+        <h2>JE M'INFORME</h2>
+        <div class="video-position">
+            <iframe src="https://www.youtube.com/embed/XkHlBAMUOho" width="640" height="360" frameborder="0"
+                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+        <p class="text-presentation">Présentation de Bôm, outils thérapeutiques pour personnes souffrant d'anorexie,
+            avec l'intervention de Pascal GUINGAND, psychiatre et addictologue, et également président de l'association
+            ARTTA (Association Réseau des Thérapies des Troubles Alimentaires).</p>
+    </div>
+
     <div class="product-section">
         <div class="block-title text-center">
             <h2>Nos produits</h2>
