--- a/bom-front/src/app/main/home/home.component.sass
+++ b/bom-front/src/app/main/home/home.component.sass
@@ -29,3 +29,27 @@ $medium: 900px
 .product-section
     margin-left: 1rem
     margin-right: 1rem
+
+.detail-banner
+    width: 100%
+    margin-top: 20px
+
+    .text-center
+        text-align: center
+
+.video-position
+    width: 100%
+    display: flex
+    justify-content: center
+    margin-bottom: 50px
+    margin-top: 50px
+
+.text-presentation
+    color: #111
+    font-family: 'Open Sans', sans-serif
+    font-size: 30px
+    font-weight: 300
+    line-height: 32px
+    margin: 0 0 72px
+    padding-left: 10%
+    padding-right: 10%
