--- a/bom-front/src/app/main/about/qui-sommes-nous/qui-sommes-nous.component.sass
+++ b/bom-front/src/app/main/about/qui-sommes-nous/qui-sommes-nous.component.sass
@@ -1,3 +1,12 @@
+.title
+    width: 100%
+    margin-top: 2rem
+    text-align: center
+    
+.description
+    margin: 1rem
+    text-align: center
+
 .content
     height: 100%
     width: 100%
