--- a/bom-front/src/app/global/fiche/fiche.component.html
+++ b/bom-front/src/app/global/fiche/fiche.component.html
@@ -10,6 +10,9 @@
             <div *ngIf="person.contact">
                 <a [href]="person.contact">contact</a>
             </div>
+            <div class="description" *ngIf="person.description">
+                "{{person.description}}"
+            </div>
         </div>
         <!-- </mat-card-footer> -->
     </mat-card>
