--- a/bom-front/src/app/global/fiche/fiche.component.sass
+++ b/bom-front/src/app/global/fiche/fiche.component.sass
@@ -1,6 +1,6 @@
 .card-member
     width: 300px
-    height: 500px
+    height: 600px
 
 // img
 //     width: 300px
@@ -22,4 +22,15 @@ mat-card-title
     padding: 0 0 8px 1rem
 
 .contact-section
-    padding-left: 1rem
+    // padding-left: 1rem
+    padding: 0 1rem 1rem 1rem
+
+.description
+    text-align: center
+    height: 100px
+    justify-content: center
+    display: flex
+    align-items: center
+    font-family: 'Dancing Script', cursive
+    font-weight: 700
+    font-size: 20px
