--- a/bom-front/src/app/main/home/home.component.sass
+++ b/bom-front/src/app/main/home/home.component.sass
@@ -1,5 +1,6 @@
 $small: 300px
 $medium: 900px
+$font-size-medium: 30px
 
 .homepage-img
     width: 100%
@@ -15,34 +16,41 @@ $medium: 900px
     // #0b214e
 .description
     text-align: center
-    margin-top: -30px
+    color: #111
+    font-family: 'Open Sans', sans-serif
+    font-size: 30px
+    font-weight: 300
+    line-height: 32px
+    margin: 0 0 72px
+    padding-left: 10%
+    padding-right: 10%
+    margin-top: -180px
 
-    @media screen and (min-width: $small)
-        //do Smth
-        p
-            padding: 10px
+    // @media screen and (min-width: $small)
+    //     //do Smth
+    //     p
+    //         padding: 10px
 
-    @media screen and (min-width: $medium)
-        // font-weight: 800
-        font-size: 34px
-
-.product-section
-    margin-left: 1rem
-    margin-right: 1rem
+    // @media screen and (min-width: $medium)
+    //     // font-weight: 800
+    //     font-size: 34px
 
 .detail-banner
     width: 100%
     margin-top: 20px
 
-    .text-center
-        text-align: center
+.text-center
+    text-align: center
 
 .video-position
     width: 100%
     display: flex
     justify-content: center
-    margin-bottom: 50px
+    margin-bottom: 30px
     margin-top: 50px
+
+.text-video
+    margin: 50px 60px 30px 60px
 
 .text-presentation
     color: #111
@@ -50,6 +58,6 @@ $medium: 900px
     font-size: 30px
     font-weight: 300
     line-height: 32px
-    margin: 0 0 72px
+    margin: 4rem 0 72px
     padding-left: 10%
     padding-right: 10%
