add(journal): read id and display journal

--- a/bom-front/src/app/main/journal-specific-post/journal-specific-post.component.html
+++ b/bom-front/src/app/main/journal-specific-post/journal-specific-post.component.html
@@ -1,1 +1,4 @@
-<p>journal-specific-post works!</p>
+<div class="content-post">
+  <h1>{{posts.title}}</h1>
+  <p [innerHTML]="posts.content"></p>
+</div>
