--- a/bom-front/src/app/main/journal/journal.component.sass
+++ b/bom-front/src/app/main/journal/journal.component.sass
@@ -45,6 +45,10 @@
   padding-right: 5%
   padding-left: 5%
   width: 100%
+  height: 40em
+  flex: 1
+  display: flex
+  flex-direction: column
 
 .margin-left
   padding-left: 5%
@@ -53,3 +57,42 @@
   float: right
   padding-right: 5%
   margin-top: 5px
+
+.editor
+  flex: 1
+  overflow-y: auto
+  width: 100%
+  margin-bottom: 2%
+
+button.submit-button
+  display: inline-block !important
+  padding: 0.7em 1.7em !important
+  margin: 0 0.3em 0.3em 0 !important
+  border-radius: 0.2em !important
+  box-sizing: border-box !important
+  text-decoration: none !important
+  font-family: 'Roboto', sans-serif !important
+  font-weight: 400 !important
+  color: white !important
+  background-color: #3369ff !important
+  box-shadow: inset 0 0.6em 2em -0.3em rgba(0,0,0,0.15),inset 0 0 0em 0.05em rgba(255,255,255,0.12) !important
+  text-align: center !important
+  position: relative !important
+
+button.submit-button:disabled
+  display: inline-block !important
+  padding: 0.7em 1.7em !important
+  margin: 0 0.3em 0.3em 0 !important
+  border-radius: 0.2em !important
+  box-sizing: border-box !important
+  text-decoration: none !important
+  font-family: 'Roboto', sans-serif !important
+  font-weight: 400 !important
+  color: white !important
+  background-color: grey !important
+  box-shadow: inset 0 -0.6em 1em -0.35em rgba(0,0,0,0.17),inset 0 0.6em 2em -0.3em rgba(255,255,255,0.15),inset 0 0 0em 0.05em rgba(255,255,255,0.12) !important
+  text-align: center !important
+  position: relative !important
+
+button.submit-button:hover
+  background-color: #0d3349 !important
