--- a/bom-front/src/app/app.component.sass
+++ b/bom-front/src/app/app.component.sass
@@ -1,2 +1,15 @@
 footer
   margin-top: 5%
+
+*
+  margin: 0
+  padding: 0
+
+.imgbox
+  display: grid
+  height: 100%
+
+.center-fit
+  max-width: 100%
+  max-height: 100vh
+  margin: auto
